--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container-sm">
       <form id="form" class="my-5">
         <div class="mb-3">
-          <label for="loan-amount" class="form-label">Loan amont</label>
-          <input id="loan-amount" type="number" min="1" placeholder="Loan amont" class="form-control" />
+          <label for="loan-amount" class="form-label">Loan amount</label>
+          <input id="loan-amount" type="number" min="1" placeholder="Loan amount" class="form-control" />
         </div>
         <div class="mb-3">
           <label for="loan-interest" class="form-label">Loan interest rate</label>
